--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 
 <html>
-  <meta http-equiv="refresh" content="0; url=https://.github.io/folder/index.html">
+  <meta http-equiv="refresh" content="0; url=https://rameti-sivamani.github.io/Myntra_Clone/Landing Page/index.html">
 </html>
 
