--- a/womensdata/women.html
+++ b/womensdata/women.html
@@ -8,7 +8,7 @@
     <title>Women Products</title>
     <link rel="shortcut icon" type="image/png" href="../Common/image/favicon.png">
     <script src="https://kit.fontawesome.com/24c494a6b6.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="../womensdata/style&js/womestyle.css">
+    <link rel="stylesheet" href="../womensdata/style&js/womenstyle.css">
     <link rel="stylesheet" href="../Common/style.css">
     <script src="https://kit.fontawesome.com/24c494a6b6.js" crossorigin="anonymous"></script>
     <link href='https://unpkg.com/boxicons@2.1.2/css/boxicons.min.css' rel='stylesheet'>
